--- a/.github/workflows/marp-build.yml
+++ b/.github/workflows/marp-build.yml
@@ -4,7 +4,8 @@ name: Deploy static Marp slides content to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    tags:
+      - v*.**
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -55,3 +56,21 @@ jobs:
           path: build/
           compression-level: 9
           retention-days: 5
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: 'build'              
+  deploy:
+    name: Deploy Marp slide HTML
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
