change build param for page

--- a/.github/workflows/marp-build.yml
+++ b/.github/workflows/marp-build.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Marp Build (slides)
         uses: docker://marpteam/marp-cli:v3.4.0
         with:
-          args: slide.md --html -o build/index.html
+          args: --theme zrenard.css --html slide.md -o build/index.html
         env:
           MARP_USER: root:root
       - name: Zip
